2005-08-14 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b6

	* Fix: Use makeGalleryAlbumHeaderUrl() in links in Emails.
	       - edit_appearance.php
	       - classes/Album.php
	       - lib/mail.php

	Thanks to Ansolom.

	* Change: Some indenting and phpdocs.

2005-08-13 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b5

	* Fix: Using referer for generating embedded urlprefix wasnt a good idea.
	        Instead now use Gallery Url + script_name.

	Thanks to Mark (SG7)

2005-08-12  Bharat Mediratta  <bharat@menalto.com> 1.5.1-RC3-cvs-b4

	* Fix: typo in albums.php 'posess' -> 'possess' (thanks driz)

2005-08-12 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b3

	* Fix: Added path to folder to the url when Gallery is embedded in *Nuke,
	       but not in the document root.

2005-08-11 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b2

	* Fix: Even if clickcount display is off for an album
	       an admin should see the click counts in stats.

	Thanks to Lucent.

2005-08-10 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b1

	%!@# ZLORFIX ! i shouldnt touch RC code.

	* Fix: Minimum width change broke ecard with pictures >= 200px width.

2005-08-09  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC2

	* Release: 1.5.1-RC2

2005-08-09 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b15

	* Fix: Ecard stamp preview failed in IE, due to space in title of popup.
	  Thanks to Dariush Molavi.

	* Change: Added minimum width of ecard.

	* Change: used tidy on ecard template.

	* Change: increased needed Debuglevel when got successfully dimensions of an image.

2005-08-07 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b14

	* Fix: Added urlprefix via referer to embedded urls, so we get complete urls in mails.

	* Fix: Possible security hole in postnuke by overriding global $name
	  Thanks to msandersen

	* Change: Format in nls.php

	* Change: Make urls in comments mail a link.

	* Fix: updated list of translateable core files.

	* Fix: Added isset() around test for optional bins in setup to avoid warnings.
