@@ -1,3 +1,8 @@
+2005-08-14  Alan Harder <alan.harder@sun.com>  1.5.1-RC3-cvs-b7
+
+	* Allow access to hidden photos via direct url.
+	  (rollback change from Gallery 1.3.1)
+
 2005-08-14 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b6
 
 	* Fix: Use makeGalleryAlbumHeaderUrl() in links in Emails.
